# Skillnova

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .tool-versions  AGENT.md  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.frontend  Dockerfile.node  Dockerfile.python  EXAMPLES.md  LICENSE  Makefile  PHASE1_README.md  QUICKTEST.md  README.md  SECURITY.md  TROUBLESHOOTING.md  docker-compose.yml  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  push.sh  render.yaml  skillnova  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
ai chatbot/: CHANGELOG.md  README.md  docker-compose.yml
ai chatbot/ai-backend/: .dockerignore  .env.example  Makefile  README.md  __init__.py  cache.py  database.py  guardrails.py  llm.py  logging_config.py  main.py  pyproject.toml  requirements.txt
ai chatbot/ai-backend/agent/: __init__.py  graph.py  nodes.py  state.py
ai chatbot/ai-backend/retriever/: __init__.py  vectorstore.py
ai chatbot/ai-backend/tests/: __init__.py  test_api.py  test_cache.py  test_llm.py  test_tools.py
ai chatbot/ai-backend/tools/: __init__.py  web_search.py
aiassistant/: CHANGELOG.md  README.md  docker-compose.yml
backend/: .env.example  Backend TEST.txt  Dockerfile  README.md  cache.py  chat_logs.db  database.py  eslint.config.js  guardrails.py  logging_config.py  package-lock.json  package.json  qa_validation.py  requirements.txt  reset-locks.js  scaled_validator.py  test_groq.py  verify_live.py  (+1 more)
(+553 files in other folders)
